<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".view.MainActivity">

    <ImageView
        android:id="@+id/imgReto"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/margin_control"
        android:layout_gravity="center"
        android:src="@drawable/quizas"/>
    <Spinner
        android:id="@+id/spiCategoria"
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/margin_control"
        android:entries="@array/categorias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtPreguntas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        tools:text="@string/txt_pregunta"
        android:textSize="25sp"
        android:textStyle="bold"/>

<!-- Inicio de layout  -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="@dimen/padding_control"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnVerdadero"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/btn_verdadero" />

        <Button
            android:id="@+id/btnFalso"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_falso" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="@dimen/padding_control"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnPrevio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/btn_prev"
            android:src="@drawable/izq"
            style="?android:attr/buttonBarButtonStyle"/>
        <TextView
            android:id="@+id/txtPuntuacion"
            android:text="9"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageButton
            android:id="@+id/btnSiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/btn_siguiente"
            android:src="@drawable/der"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_control"
        android:layout_marginTop="70dp">
        <TextView
            android:id="@+id/txtContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contacto"
            android:textSize="20sp"
            android:textColor="#03a9f4"/>

        <TextView
            android:id="@+id/txtAcerca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_control"
            android:layout_marginStart="220dp"
            android:text="Acerca"
            android:textColor="#03a9f4"
            android:textSize="20sp" />
    </LinearLayout>






</androidx.appcompat.widget.LinearLayoutCompat>